--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
 	/* Значення за замовченням */
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	color: #444;
-	/* background-color: #333; */
+	/* background-color: rgb(218, 218, 218); */
 	/* font-size: 16px; */
 }
 [class *="__container"]{
@@ -56,18 +56,28 @@ body{
 
 .page{
 	padding: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 /* ============================ */
 
 .page__calendar{
+	display: flex;
+	justify-content: center;
+	/* align-items: center; */
+	border: 1px solid yellow;
 	padding-top: 80px;
 }
-.calendar__container{
-	display: flex;
+.calendar{
+	flex: 0 1 90%;
+	display: inline-flex;
 	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	gap: 20px;
-	/* border: 1px solid yellow; */
 }
 .calendar__title{
 	font-size: 32px;
@@ -77,8 +87,6 @@ body{
 	display: flex;
 	flex-wrap: wrap;
 	gap: 20px;
-	justify-content: flex-start;
-	align-items: stretch;
 	margin-bottom: 60px;
 }
 @media (max-width:1102px){
@@ -98,9 +106,9 @@ body{
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
-	border: 1px solid rgb(185, 185, 185);
+	border: 1px solid rgb(86, 226, 110);
 	border-radius: 5px;
-	flex:0 0 255px;
+	flex:0 0 260px;
 	padding-bottom: 20px;
 }
 @media (max-width:627px){
@@ -109,16 +117,22 @@ body{
 	}
 }
 .sut>.list__title{
-	background: rgb(97, 92, 141);
+	background: rgb(245, 232, 113);
+}
+.sut{
+	border-color: rgb(245, 232, 113);
 }
 .sun>.list__title{
 	background: rgb(255, 96, 75);
+}
+.sun{
+	border-color:rgb(255, 96, 75) ;
 }
 /* .row__list *:not(:last-child){
 	margin-bottom: 20px;
 } */
 .list__title{
-	background: rgb(135, 144, 185);
+	background: rgb(86, 226, 110);
 	font-weight: 700;
 	color: rgb(255, 255, 255);
 	/* border-radius: 5px 0px 5px 0px; */
@@ -151,20 +165,29 @@ body{
 	/* padding-left: 20px; */
 }
 .masha>.list>.list__title{
-	background: rgb(214, 125, 255);
+	background: rgb(125, 127, 255);
 }
 .masha>.list>.list__item>.item__time{
-	color: rgb(134, 79, 160);
+	color: rgb(82, 179, 114);
 }
 .masha>.sut>.list__title{
-	background: rgb(194, 126, 168);
+	background: rgb(67, 192, 63);
 }
 .masha>.sun>.list__title{
 	background: rgb(255, 75, 75);
 }
+.masha>.list{
+	border-color: rgb(125, 127, 255);
+}
+.masha>.sut{
+	border-color:rgb(67, 192, 63);
+}
+.masha>.sun{
+	border-color:rgb(255, 75, 75);
+}
 .list__item a{
 	padding: 5px;
-	background: rgb(146, 146, 146);
+	background: rgb(255, 164, 27);
 	border-radius: 10px;
 	font-size: 16px;
 	color: rgb(255, 255, 255);
